Update CI related configuration files

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,3 +15,15 @@ order_by_type = true
 
 [bdist_wheel]
 universal=1
+
+[coverage:run]
+include = pg_timepart/*,test/*
+omit =
+    pg_timepart/migrations/*
+branch = True
+
+[coverage:report]
+exclude_lines =
+    pragma: no cover
+    raise NotImplementedError
+ignore_errors = True
