--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+dist: xenial
 language: python
 cache: pip
 sudo: required
@@ -8,16 +9,23 @@ matrix:
     - { python: "3.6", env: DJANGO=2.1 }
     - { python: "3.7", env: DJANGO=2.0 }
     - { python: "3.7", env: DJANGO=2.1 }
-    - { python: "3.7", env: TOXENV=lint }
-    - { python: "3.7", env: TOXENV=docs }
+    - { python: "3.7", env: DJANGO=2.2 }
+    - { python: "3.7", env: DJANGO=master }
+    - { python: "3.6", env: TOXENV=lint }
+    - { python: "3.6", env: TOXENV=docs }
   allow_failures:
     - env: TOXENV=docs
+    - env: DJANGO=master
+    - env: DJANGO=2.2
 services:
   - docker
+before_install:
+  - sudo /etc/init.d/postgresql stop
 install:
   - pip install '.[dev]' tox-travis
 before_script:
   - docker-compose -f dev/docker-compose.yml up -d
+  - sleep 5
 script:
   - tox
 after_success:
