--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   postgres:
-    image: postgres:11.1-alpine
+    image: postgres:${POSTGRES_VERSION:-11.1-alpine}
     container_name: postgres
     restart: always
     volumes:
