--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    {py36,py37}-django{20,21}
+    {py36,py37}-django{20,21,22,master}
     docs
     lint
 
@@ -8,6 +8,8 @@ envlist =
 DJANGO =
     2.0: django20
     2.1: django21
+    2.2: django22
+    master: djangomaster
 
 [testenv]
 setenv =
@@ -22,21 +24,24 @@ deps =
           flake8
           flake8-bugbear
           flake8-quotes
-    django20: Django~=2.0
-    django21: Django~=2.1
+    django20: Django>=2.0,<2.1
+    django21: Django>=2.1,<2.2
+    django22: Django>=2.2a1,<3.0
+    djangomaster: https://github.com/django/django/archive/master.tar.gz
+
 commands =
-    ./run_test.py -c {posargs}
+    python3 ./run_test.py -c {posargs}
 
 [testenv:docs]
-basepython = python3.7
-whitelist_externals=make
-changedir=docs
-commands=
-  make html
+basepython = python3.6
+whitelist_externals = make
+changedir = docs
+commands =
+    make html
 
 [testenv:lint]
-basepython = python3.7
-commands=
+basepython = python3.6
+commands =
     isort -rc -c pg_timepart tests
     black pg_timepart tests -l 157 --exclude pg_timepart/migrations/*
     flake8 {toxinidir}/pg_timepart {toxinidir}/tests {toxinidir}/*.py --exclude */migrations
