Refactoring code and supporting new partitioning

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,9 +17,9 @@ order_by_type = true
 universal=1
 
 [coverage:run]
-include = pg_timepart/*,test/*
+include = pg_partitioning/*,test/*
 omit =
-    pg_timepart/migrations/*
+    pg_partitioning/migrations/*
 branch = True
 
 [coverage:report]
