--- a/tox.ini
+++ b/tox.ini
@@ -42,6 +42,6 @@ commands =
 [testenv:lint]
 basepython = python3.6
 commands =
-    isort -rc -c pg_timepart tests
-    black pg_timepart tests -l 157 --exclude pg_timepart/migrations/*
-    flake8 {toxinidir}/pg_timepart {toxinidir}/tests {toxinidir}/*.py --exclude */migrations
+    isort -rc pg_partitioning tests
+    black pg_partitioning tests -l 157 --exclude pg_partitioning/migrations/*
+    flake8 {toxinidir}/pg_partitioning {toxinidir}/tests {toxinidir}/*.py --exclude */migrations
