--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ matrix:
   include:
     - { python: "3.6", env: DJANGO=2.0 }
     - { python: "3.6", env: DJANGO=2.1 }
+    - { python: "3.6", env: DJANGO=2.2 }
     - { python: "3.7", env: DJANGO=2.0 }
     - { python: "3.7", env: DJANGO=2.1 }
     - { python: "3.7", env: DJANGO=2.2 }
@@ -16,7 +17,6 @@ matrix:
   allow_failures:
     - env: TOXENV=docs
     - env: DJANGO=master
-    - env: DJANGO=2.2
 services:
   - docker
 before_install:
