--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    {py36,py37}-django{20,21,22,master}
+    {py36,py37}-django{20,21,22}
     docs
     lint
 
@@ -9,7 +9,6 @@ DJANGO =
     2.0: django20
     2.1: django21
     2.2: django22
-    master: djangomaster
 
 [testenv]
 setenv =
@@ -27,7 +26,6 @@ deps =
     django20: Django>=2.0,<2.1
     django21: Django>=2.1,<2.2
     django22: Django>=2.2a1,<3.0
-    djangomaster: https://github.com/django/django/archive/master.tar.gz
 
 commands =
     python3 ./run_test.py -c {posargs}
